# hiredis-msvc

./: CMakeLists.txt  Readme.md
include/: hiredis.h  net.h  sds.h  win32_hiredis.h
include/win32_interop/: win32_fdapi.h  win32_rfdmap.h  win32_types_hiredis.h  win32_wsiocp.h
src/: async.c  hiredis.c  net.c  read.c
src/win32_interop/: win32_ANSI.c  win32_APIs.c  win32_common.cpp  win32_fdapi.cpp  win32_fdapi_crt.cpp  win32_rfdmap.cpp  win32_variadic_functor.cpp  win32_wsiocp.c
